# event-frame

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.md
Demo/: CMakeLists.txt  Main.cpp
Include/: BaseThread.h  OSCheck.h  WaitType.h
Include/Event/: BaseComponent.h  Component.h  Controller.h  Event.h  Key.h  TypeEvent.h  UserEvent.h
Include/Lock/: Semaphore.h
Include/Thread/: BaseStoppable.h  BaseThread.h
